[project]
name = "caa-backup"
version = "1.0.0"
description = "Cover Art Archive backup tool"
authors = [{name = "MetaBrainz Foundation"}]
license = {text = "GPL-2.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "peewee>=3.16",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.urls]
Repository = "https://github.com/metabrainz/caa-backup"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.0",
    "ty>=0.0.1a1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
